--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -14,6 +14,7 @@
    <table class="table table-responsive">
     <tr>
       <th>ID заказа</th>
+      <th>Сумма заказа</th>
       <th>Клиент</th>
       <th>Телефон</th>
       <th>Адрес доставки</th>
@@ -21,10 +22,12 @@
 
     {% for item in order_items %}
       <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td>{{item.id}}</td>
+        <td>{{item.get_order_price_sum}}</td>
+        <td>{{item.firstname}} {{item.lastname}}</td>
+        <td>{{item.phonenumber}}</td>
+        <td>{{item.address}}</td>
+        <td><a href="{% url admin:foodcartapp_order_change object_id=item.id %}">Редактировать</a></td>
       </tr>
     {% endfor %}
    </table>
