--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -27,7 +27,7 @@
         <td>{{item.firstname}} {{item.lastname}}</td>
         <td>{{item.phonenumber}}</td>
         <td>{{item.address}}</td>
-        <td><a href="{% url admin:foodcartapp_order_change object_id=item.id %}">Редактировать</a></td>
+        <td><a href="{% url "admin:foodcartapp_order_change" object_id=item.id %}">Редактировать</a></td>
       </tr>
     {% endfor %}
    </table>
