--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -14,20 +14,25 @@
    <table class="table table-responsive">
     <tr>
       <th>ID заказа</th>
+      <th>Статус заказа</th>
       <th>Сумма заказа</th>
       <th>Клиент</th>
       <th>Телефон</th>
+      <th>Комментарии</th>
       <th>Адрес доставки</th>
+      <th>Ссылка на страницу редактора</th>
     </tr>
 
     {% for item in order_items %}
       <tr>
         <td>{{item.id}}</td>
+        <td>{{item.order_status}}</td>
         <td>{{item.get_order_price_sum}}</td>
         <td>{{item.firstname}} {{item.lastname}}</td>
         <td>{{item.phonenumber}}</td>
+        <td>{{item.comment}}</td>
         <td>{{item.address}}</td>
-        <td><a href="{% url "admin:foodcartapp_order_change" object_id=item.id %}">Редактировать</a></td>
+        <td><a href="{% url 'admin:foodcartapp_order_change' object_id=item.id %}?next={% url 'restaurateur:view_orders' %}">Редактировать</a></td>
       </tr>
     {% endfor %}
    </table>
