--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -15,11 +15,13 @@
     <tr>
       <th>ID заказа</th>
       <th>Статус заказа</th>
+      <th>Пособ оплаты</th>
       <th>Сумма заказа</th>
       <th>Клиент</th>
       <th>Телефон</th>
       <th>Комментарии</th>
       <th>Адрес доставки</th>
+      <th>Рестораны</th>
       <th>Ссылка на страницу редактора</th>
     </tr>
 
@@ -27,11 +29,19 @@
       <tr>
         <td>{{item.id}}</td>
         <td>{{item.order_status}}</td>
+        <td>{{item.payment_method}}</td>
         <td>{{item.get_order_price_sum}}</td>
         <td>{{item.firstname}} {{item.lastname}}</td>
         <td>{{item.phonenumber}}</td>
         <td>{{item.comment}}</td>
         <td>{{item.address}}</td>
+        <td>
+          <details>
+            <summary>Развернуть</summary><p>
+            {{item.get_restaurant}}
+          </p>
+          </details>
+        </td>
         <td><a href="{% url 'admin:foodcartapp_order_change' object_id=item.id %}?next={% url 'restaurateur:view_orders' %}">Редактировать</a></td>
       </tr>
     {% endfor %}
