- Added fetch_coordinates func to get_restaurant_distance func in models.py. - Added cache to DataBase. - Change get_restaurant to get_restaurant_distance in order_items.html. - Added in requirements.txt environ, geopy, requests.

--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -38,7 +38,7 @@
         <td>
           <details>
             <summary>Развернуть</summary><p>
-            {{item.get_restaurant}}
+            {{item.get_restaurant_distance}}
           </p>
           </details>
         </td>
